k8s/docker-registry/ingress-prod.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: docker-registry
  namespace: docker-registry
spec:
  tls:
    - hosts:
        - $DOCKER_REGISTRY_HOSTNAME
      secretName: docker-tls
  rules:
    - host: $DOCKER_REGISTRY_HOSTNAME
      http:
        paths:
          - backend:
              serviceName: docker-registry
              servicePort: 5000
            path: /
